@@ -41,6 +41,7 @@ Olaf Hering
 Kristian Høgsberg
 Yves Jaeger
 Per Dalgas Jakobsen
+Olaf Kaehler
 Ferenc Kahlesz
 Kurt Konolige
 Seemant Kulleen
