@@ -42,7 +42,7 @@ specifications.
 
 The maintainer of the 1394-Based Digital Camera Control Library is currently
 Damien Douxchamps. Send suggestions, bug reports and fixes to the mailing
-list libdc1394devel@lists.sf.net. Subscription to the list is encouraged, but
+list libdc1394-devel@lists.sf.net. Subscription to the list is encouraged, but
 not necessary (non-subscribers are moderated). See the file AUTHORS for a
 complete list of contributors.
 
